--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indecision-app",
+  "name": "expensify-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,6 +25,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^2.2.2",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.18.2",
     "validator": "^8.0.0",
