--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
-    "live-server": "^1.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.13.0",
     "normalize.css": "^7.0.0",
@@ -40,10 +40,10 @@
     "style-loader": "^0.18.2",
     "uuid": "^3.4.0",
     "validator": "^8.0.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.1"
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "webpack-dev-server": "^2.5.1"
+
   }
 }
