--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm run build:prod",
+    "dev-test": "cross-env NODE_ENV=test webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -46,6 +47,8 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.0.5",
+    "dotenv": "^4.0.0",
     "webpack-dev-server": "^2.5.1"
   }
 }
